trunk/Archive2/74/0dadfe3b55880e/output
main.cpp: In function 'int main()':
main.cpp:23:17: error: taking address of temporary [-fpermissive]
     fn(&A{ 1, 2 });      //OK, no extra magick
                 ^
main.cpp:24:16: error: taking address of temporary [-fpermissive]
     fn(&B {3, 4});      //error: expression must be an lvalue or function designator 
                ^
main.cpp:25:20: error: taking address of temporary [-fpermissive]
     fn(&(B)B{ 3, 4 });  //OK with explicit cast to B (but why?)
                    ^
